--- a/src/app/transactions/dialog/confirm-hold-transaction-dialog/confirm-hold-transaction-dialog.component.html
+++ b/src/app/transactions/dialog/confirm-hold-transaction-dialog/confirm-hold-transaction-dialog.component.html
@@ -6,8 +6,8 @@
   {{'Shared_Component.DeleteDialog.buttonCancel'|translate}}
 </button>
   <button mat-raised-button color="primary"
-  [mat-dialog-close]="{ isSuccess: true }">Thành công</button>
+  [mat-dialog-close]="{ isSuccess: true }">{{'Transactions.Dialog.ConfirmHoldTransaction.success'|translate}}</button>
 </div>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>Đóng</button>
+  <button mat-raised-button mat-dialog-close>{{'Transactions.Dialog.ConfirmHoldTransaction.close'|translate}}</button>
 </mat-dialog-actions>
