--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/advance-fee-roll-term/advance-fee-roll-term.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/advance-fee-roll-term/advance-fee-roll-term.component.html
@@ -11,7 +11,7 @@
       </mat-option>
     </mat-select>
     <mat-error *ngIf="client.hasError('required')">
-      Yêu cầu: chọn khách hàng
+      {{'Saving_Account_Component.clientAdvanceCash.requireSelectClient' |translate}}
     </mat-error>
   </mat-form-field>
 
