--- a/src/app/transactions/dialog/upload-bill/upload-bill.component.html
+++ b/src/app/transactions/dialog/upload-bill/upload-bill.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Tải lên hóa đơn từ máy bán hàng</h1>
+<h1 mat-dialog-title>{{'Transactions.Dialog.UploadBill.uploadBill'|translate}}</h1>
 <div mat-dialog-content>
   <div class="custom-files-input" fxLayout="column">
     <mat-label for="file">{{('Client_Component.ClientStepper.GeneralStep.labelInputFileDocument'|translate)}}</mat-label>
