--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/transaction-history/transaction-history-dialog.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/transaction-history/transaction-history-dialog.component.html
@@ -1,5 +1,5 @@
 <mat-card-content>
-  <h1 mat-dialog-title>Danh sách giao dịch 90 ngày gần nhất</h1>
+  <h1 mat-dialog-title>{{'Transactions.RollTernSchedule.Dialog.TransactionHistory.title'|translate}}</h1>
 </mat-card-content>
 <div mat-dialog-content>
   <mat-card>
@@ -13,13 +13,13 @@
         matSort
       >
         <ng-container matColumnDef="cardNumber">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Thẻ</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{'Transactions.RollTernSchedule.Dialog.TransactionHistory.cardNumber'|translate}}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction; let i = dataIndex">
             {{ transaction.panNumber.replace("XXX-XXX", "X") }}
           </td>
         </ng-container>
         <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>Dịch vụ</th>
+          <th mat-header-cell *matHeaderCellDef>{{'Transactions.RollTernSchedule.Dialog.TransactionHistory.type'|translate}}</th>
           <td mat-cell *matCellDef="let transaction">
             <button mat-raised-button color="primary">
               {{ displayTransactionType(transaction.type) }}
@@ -28,12 +28,12 @@
         </ng-container>
 
         <ng-container matColumnDef="amount">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Số tiền</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{'Transactions.RollTernSchedule.Dialog.TransactionHistory.amount'|translate}}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">{{ transaction.terminalAmount | money }}</td>
         </ng-container>
 
         <ng-container matColumnDef="txnDate">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Ngày giao dịch</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{'Transactions.RollTernSchedule.Dialog.TransactionHistory.txnDate'|translate}}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">
             {{ transaction.createdDate | date: "dd-MM-yyyy HH:mm:ss" }}
           </td>
@@ -42,7 +42,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
           <td mat-cell *matCellDef="let transaction">
             <a href="#/transaction/view?tranId={{ transaction.refid }}">
-              <mat-icon style="color: black" title="Xem chi tiết">remove_red_eye</mat-icon>
+              <mat-icon style="color: black" title="Xem chi tiết">{{'Transactions.RollTernSchedule.Dialog.TransactionHistory.remove_red_eye'|translate}}</mat-icon>
             </a>
           </td>
         </ng-container>
@@ -50,16 +50,16 @@
           <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="displayedColumns.length">
             <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
               <div class="example-element-description" fxLayout="column">
-                <div><span style="font-weight: bold"> Giao dịch :</span>&nbsp;{{ element.panHolderName }}</div>
+                <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.Dialog.TransactionHistory.panHolderName'|translate}}</span>&nbsp;{{ element.panHolderName }}</div>
                 <div>
-                  <span style="font-weight: bold"> Ngày giao dịch :</span>&nbsp; &nbsp;{{
+                  <span style="font-weight: bold"> {{'Transactions.RollTernSchedule.Dialog.TransactionHistory.createdDate'|translate}}</span>&nbsp; &nbsp;{{
                     element.createdDate | date: "dd-MM-yyyy HH:mm:ss"
                   }}
                 </div>
-                <div><span style="font-weight: bold"> Số tiền:</span>&nbsp; &nbsp;{{ element.terminalAmount }}</div>
-                <div><span style="font-weight: bold"> Phí thực tế:</span>&nbsp; &nbsp;{{ element.identifierId }}</div>
-                <div><span style="font-weight: bold"> Đã chi :</span>&nbsp; &nbsp;{{ element.officeName | money }}</div>
-                <div><span style="font-weight: bold"> Đã thu hồi :</span>&nbsp; &nbsp;{{ element.agencyName }}</div>
+                <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.Dialog.TransactionHistory.terminalAmount'|translate}}</span>&nbsp; &nbsp;{{ element.terminalAmount }}</div>
+                <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.Dialog.TransactionHistory.identifierId'|translate}}</span>&nbsp; &nbsp;{{ element.identifierId }}</div>
+                <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.Dialog.TransactionHistory.officeName'|translate}}</span>&nbsp; &nbsp;{{ element.officeName | money }}</div>
+                <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.Dialog.TransactionHistory.agencyName'|translate}}</span>&nbsp; &nbsp;{{ element.agencyName }}</div>
               </div>
             </div>
           </td>
@@ -73,11 +73,11 @@
           (click)="expandedElement = expandedElement === element ? null : element"
         ></tr>
       </table>
-      <h3 style="color: red; text-align: center" *ngIf="dataSource.length === 0">Chưa có giao dịch!</h3>
+      <h3 style="color: red; text-align: center" *ngIf="dataSource.length === 0">{{'Transactions.RollTernSchedule.Dialog.TransactionHistory.noTransaction'|translate}}</h3>
     </mat-card-content>
   </mat-card>
 </div>
 <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"></div>
 <mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
-  <button mat-raised-button mat-dialog-close>Đóng</button>
+  <button mat-raised-button mat-dialog-close>{{'Transactions.RollTernSchedule.Dialog.TransactionHistory.close'|translate}}</button>
 </mat-dialog-actions>
