--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -2,14 +2,14 @@
   <mat-card-content>
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formDate">
       <mat-form-field fxFlex="31%">
-        <mat-label>Từ ngày</mat-label>
+        <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.fromDate'|translate}}</mat-label>
         <input matInput [matDatepicker]="transactionDateFromPicker"   formControlName="fromDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateFromPicker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Đến ngày</mat-label>
+        <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.toDate'|translate}}</mat-label>
         <input matInput [matDatepicker]="transactionDateToPicker"  formControlName="toDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateToPicker></mat-datepicker>
@@ -20,7 +20,7 @@
 
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
     <mat-form-field fxFlex="18%" *midasHasPermission="'REFINANCE_EXECUTIVE'">
-      <mat-label>Chi nhánh</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.OfficeFilter'|translate}}</mat-label>
       <mat-select formControlName="OfficeFilter">
         <mat-option *ngFor="let office of offices" [value]="office.officeId">
           {{ office.name }}
@@ -28,7 +28,7 @@
       </mat-select>
     </mat-form-field>
     <mat-form-field fxFlex="18%" *midasHasPermission="'REFINANCE_EXECUTIVE'">
-      <mat-label>Nhân viên</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.staffFilter'|translate}}</mat-label>
       <mat-select matSelect matNativeControl formControlName="staffFilter">
         <mat-option *ngFor="let option of staffs" [value]="option.id">
           {{ option.displayName }}
@@ -36,7 +36,7 @@
       </mat-select>
     </mat-form-field>
     <mat-form-field fxFlex="18%">
-      <mat-label>Trạng thái</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.stageFilter'|translate}}</mat-label>
       <select matSelect matNativeControl formControlName="stageFilter">
         <option *ngFor="let status of statusOption" [value]="status.refid">
           {{ status.value }}
@@ -45,7 +45,7 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="18%">
-      <mat-label>Ghi chú</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.statusFilter'|translate}}</mat-label>
       <select matSelect matNativeControl formControlName="statusFilter">
         <option *ngFor="let status of noteOption" [value]="status.refid">
           {{ status.value }}
@@ -54,10 +54,10 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="18%">
-      <mat-label>Ngân hàng</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.bankName'|translate}}</mat-label>
       <select matSelect matNativeControl formControlName="bankName">
         <option value="ALL">
-          Tất cả ngân hàng
+          {{'Transactions.RollTernSchedule.DueDayCardTab.allBank'|translate}}
         </option>
         <option *ngFor="let bank of listBank" [value]="bank.bankCode">
           {{ bank.bankName }}
@@ -66,10 +66,10 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="18%">
-      <mat-label>Loại thẻ</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.cardType'|translate}}</mat-label>
       <select matSelect matNativeControl formControlName="cardType">
         <option value="ALL">
-          Tất cả loại thẻ
+          {{'Transactions.RollTernSchedule.DueDayCardTab.allcardType'|translate}}
         </option>
         <option *ngFor="let card of cardTypeOption" [value]="card.code">
           {{ card.description }}
@@ -78,11 +78,11 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="18%">
-      <mat-label>Tìm tên khách hàng/số thẻ</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.query'|translate}}</mat-label>
       <input matInput formControlName="query" />
     </mat-form-field>
     <mat-form-field fxFlex="18%">
-      <mat-label>Tình trạng thẻ</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.DueDayCardTab.status'|translate}}</mat-label>
       <select matSelect matNativeControl formControlName="cardHoldFilter">
         <option *ngFor="let status of cardHoldOption" [value]="status.code">
           {{ status.description }}
@@ -92,7 +92,7 @@
     <div fxFlex="18%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
       <mat-label ></mat-label>
       <mat-checkbox fxFlex="100%" labelPosition="after" formControlName="viewDoneTransaction" class="margin-v">
-        Đã thực hiện giao dịch
+        {{'Transactions.RollTernSchedule.DueDayCardTab.viewDoneTransaction'|translate}}
       </mat-checkbox>
 
     </div>
@@ -104,10 +104,10 @@
         color="primary"
         mat-raised-button
       >
-        Tìm kiếm &nbsp;<i class="fa fa-search" aria-hidden="true"></i>
+      {{'Transactions.RollTernSchedule.DueDayCardTab.search'|translate}}&nbsp;<i class="fa fa-search" aria-hidden="true"></i>
       </button>
       <h3 *ngIf="!fromDateAndToDate">
-        Vui lòng chọn thời gian &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
+        {{'Transactions.RollTernSchedule.DueDayCardTab.selectTime'|translate}}&nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
       </h3>
     </div>
   </div>
@@ -115,21 +115,21 @@
   <mat-card-content>
     <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="panHolderName">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Tên khách hàng</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.DueDayCardTab.panHolderName'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">
           <a href="/#/clients/{{ transaction.clientId }}/general?typeViewClient=view">
-            <mat-icon style="color: black" title="Chi tiết">person</mat-icon>
+            <mat-icon style="color: black" title="Chi tiết">{{'Transactions.RollTernSchedule.DueDayCardTab.person'|translate}}</mat-icon>
             {{ transaction.clientName }}<br />
           </a>
           <mat-label style="font-size: small" *ngIf="transaction.groupName">
             <a href="javascript:void(0)">
-              <mat-icon style="color: black; " title="Thuộc đại lý">groups</mat-icon>
+              <mat-icon style="color: black; " title="Thuộc đại lý">{{'Transactions.RollTernSchedule.DueDayCardTab.groups'|translate}}</mat-icon>
               {{ transaction.groupName }}
             </a>
             <br />
           </mat-label>
           <mat-label style="font-size: small" title="Số dư tài khoản">
-            <mat-icon style="color: green">monetization_on</mat-icon>
+            <mat-icon style="color: green">{{'Transactions.RollTernSchedule.DueDayCardTab.monetization_on'|translate}}</mat-icon>
 
             {{ transaction.accountBalanceDerived | money }}
           </mat-label>
@@ -137,14 +137,14 @@
           <mat-label (click)="showHistoryTransaction(transaction.clientId)" title="Xem lịch sử giao dịch 90 ngày gần nhất">
             <mat-icon style="color: black">fact_check</mat-icon>
             <a style="color: black;" href="javascript:void(0)">
-              Lịch sử giao dịch
+              {{'Transactions.RollTernSchedule.DueDayCardTab.showHistoryTransaction'|translate}}
             </a>
           </mat-label>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="phone">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số điện thoại/ <br/> Số thẻ (Ngân hàng)</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.DueDayCardTab.phone'|translate}}<br/> {{'Transactions.RollTernSchedule.DueDayCardTab.bankCode'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
           {{ card.clientPhone }} <br />
           {{ card.cardNumber.replace("XXX-XXX", "X") }} (
@@ -154,7 +154,7 @@
       </ng-container>
 
       <ng-container matColumnDef="cardNumber">
-        <th mat-header-cell  *matHeaderCellDef>Chi nhánh/ <br/> Nhân viên</th>
+        <th mat-header-cell  *matHeaderCellDef>{{'Transactions.RollTernSchedule.DueDayCardTab.officeName'|translate}}<br/> {{'Transactions.RollTernSchedule.DueDayCardTab.staffName'|translate}}</th>
         <td mat-cell *matCellDef="let card">
           <label style="color: blue; font-weight: bold;">
             {{ card.officeName }} <br />
@@ -164,7 +164,7 @@
       </ng-container>
 
       <ng-container matColumnDef="dueDay">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Ngày <br /> đến hạn / <br /> hết hạn</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.DueDayCardTab.dueDay'|translate}} <br /> {{'Transactions.RollTernSchedule.DueDayCardTab.expiredDate'|translate}}<br /> {{'Transactions.RollTernSchedule.DueDayCardTab.expiredDate2'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
           <mat-form-field>
             <input style="color: green; font-weight: bold" matInput type="text" [(ngModel)]="card.dueDay" mask="00" />
@@ -176,14 +176,14 @@
       </ng-container>
 
       <ng-container matColumnDef="isHold">
-        <th mat-header-cell *matHeaderCellDef>Giử thẻ</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Transactions.RollTernSchedule.DueDayCardTab.isHold'|translate}}</th>
         <td mat-cell *matCellDef="let card">
           <input matCheckbox type="checkbox" [(ngModel)]="card.isHold" [checked]="card.isHold == 1" />
         </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell  *matHeaderCellDef>Trạng thái</th>
+        <th mat-header-cell  *matHeaderCellDef>{{'Transactions.RollTernSchedule.DueDayCardTab.status2'|translate}}</th>
         <td mat-cell   *matCellDef="let card">
           <mat-form-field appearance="outline">
             <select  matSelect [(ngModel)]="card.trackingState" matNativeControl>
@@ -195,7 +195,7 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="note">
-        <th mat-header-cell   *matHeaderCellDef>Ghi chú</th>
+        <th mat-header-cell   *matHeaderCellDef>{{'Transactions.RollTernSchedule.DueDayCardTab.note'|translate}}</th>
         <td mat-cell  *matCellDef="let card">
           <mat-form-field appearance="outline">
             <select matSelect [(ngModel)]="card.note" matNativeControl>
@@ -207,7 +207,7 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef  >Hành động</th>
+        <th mat-header-cell *matHeaderCellDef  >{{'Transactions.RollTernSchedule.DueDayCardTab.actions'|translate}}</th>
         <td mat-cell *matCellDef="let card; let i = dataIndex" style="width: 8% !important; text-align: center;">
           <mat-icon style="color: green;" title="Cập nhật" (click)="updateCardTrackingState(i)">save</mat-icon>
           <mat-icon style="color: blue;" title="Nhận phí" (click)="advanceCash(card.refId, card.clientId)"
@@ -222,9 +222,9 @@
         <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="displayedColumns.length">
           <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
             <div class="example-element-description" fxLayout="column">
-              <div><span style="font-weight: bold"> Tên khách hàng :</span>&nbsp;{{ element.panHolderName }}</div>
-              <div><span style="font-weight: bold"> Số điện thoại :</span>&nbsp; &nbsp;{{ element.clientPhone }}</div>
-              <div><span style="font-weight: bold"> Số thẻ:</span>&nbsp; &nbsp;{{ element.identifierId }}</div>
+              <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.DueDayCardTab.panHolderName2'|translate}}</span>&nbsp;{{ element.panHolderName }}</div>
+              <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.DueDayCardTab.clientPhone'|translate}}</span>&nbsp; &nbsp;{{ element.clientPhone }}</div>
+              <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.DueDayCardTab.identifierId'|translate}}</span>&nbsp; &nbsp;{{ element.identifierId }}</div>
             </div>
           </div>
         </td>
