--- a/src/app/transactions/rollTerm-schedule-transaction/on-roll-term-card-tab/on-roll-term-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/on-roll-term-card-tab/on-roll-term-card-tab.component.html
@@ -2,14 +2,14 @@
   <mat-card-content>
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formDate">
       <mat-form-field fxFlex="31%">
-        <mat-label>Từ ngày</mat-label>
+        <mat-label>{{'Transactions.RollTernSchedule.OnRollTermCardTab.fromDate'|translate}}</mat-label>
         <input matInput [matDatepicker]="transactionDateFromPicker" [min]="minDate" formControlName="fromDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateFromPicker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Đến ngày</mat-label>
+        <mat-label>{{'Transactions.RollTernSchedule.OnRollTermCardTab.toDate'|translate}}</mat-label>
         <input matInput [matDatepicker]="transactionDateToPicker" [min]="minDate" formControlName="toDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateToPicker></mat-datepicker>
@@ -20,9 +20,9 @@
 
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
     <mat-form-field fxFlex="18%">
-      <mat-label>Ngân hàng</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.OnRollTermCardTab.bankName'|translate}}</mat-label>
       <select matSelect matNativeControl formControlName="bankName">
-        <option value="ALL">Tất cả ngân hàng</option>
+        <option value="ALL">{{'Transactions.RollTernSchedule.OnRollTermCardTab.allBank'|translate}}</option>
         <option *ngFor="let bank of listBank" [value]="bank.bankCode">
           {{ bank.bankName }}
         </option>
@@ -30,7 +30,7 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="36%">
-      <mat-label>Tìm tên khách hàng/số thẻ</mat-label>
+      <mat-label>{{'Transactions.RollTernSchedule.OnRollTermCardTab.query'|translate}}</mat-label>
       <input matInput formControlName="query" />
     </mat-form-field>
     <div fxFlex="20%">
@@ -41,10 +41,10 @@
         color="primary"
         mat-raised-button
       >
-        Tìm kiếm &nbsp;<i class="fa fa-search" aria-hidden="true"></i>
+      {{'Transactions.RollTernSchedule.OnRollTermCardTab.search'|translate}} &nbsp;<i class="fa fa-search" aria-hidden="true"></i>
       </button>
       <h3 *ngIf="!fromDateAndToDate">
-        Vui lòng chọn thời gian &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
+        {{'Transactions.RollTernSchedule.OnRollTermCardTab.selectTime'|translate}} &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
       </h3>
     </div>
   </div>
@@ -52,21 +52,21 @@
   <mat-card-content>
     <table mat-table multiTemplateDataRows [dataSource]="dataSource">
       <ng-container matColumnDef="panHolderName">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Tên khách hàng</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.panHolderName'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">
           <a href="/#/clients/{{ transaction.clientId }}/general?typeViewClient=view">
-            <mat-icon style="color: black" title="Chi tiết">person</mat-icon>
+            <mat-icon style="color: black" title="Chi tiết">{{'Transactions.RollTernSchedule.OnRollTermCardTab.person'|translate}}</mat-icon>
             {{ transaction.clientName }}<br />
           </a>
           <mat-label style="font-size: small" title="Số dư tài khoản">
-            <mat-icon style="color: green">monetization_on</mat-icon>
+            <mat-icon style="color: green">{{'Transactions.RollTernSchedule.OnRollTermCardTab.monetization_on'|translate}}</mat-icon>
 
             {{ transaction.accountBalanceDerived | money }}
           </mat-label>
           <br />
           <mat-label style="font-size: small" *ngIf="transaction.groupName">
             <a href="#/groups/{{ transaction.groupId }}/general">
-              <mat-icon style="color: black" title="Thuộc đại lý">groups</mat-icon>
+              <mat-icon style="color: black" title="Thuộc đại lý">{{'Transactions.RollTernSchedule.OnRollTermCardTab.groups'|translate}}</mat-icon>
               {{ transaction.groupName }}
             </a>
             <br />
@@ -76,30 +76,30 @@
             title="Xem lịch sử giao dịch 90 ngày gần nhất"
           >
             <mat-icon style="color: black">fact_check</mat-icon>
-            <a style="color: black" href="javascript:void(0)"> Lịch sử giao dịch </a>
+            <a style="color: black" href="javascript:void(0)"> {{'Transactions.RollTernSchedule.OnRollTermCardTab.showHistoryTransaction'|translate}} </a>
           </mat-label>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="phone">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số điện thoại</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.phone'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
           {{ card.clientPhone }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="cardNumber">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số thẻ</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.cardNumber'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">{{ card.cardNumber.replace("XXX-XXX", "X") }}</td>
       </ng-container>
 
       <ng-container matColumnDef="bankName">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Ngân hàng</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.bankName2'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">{{ card.bankName }}</td>
       </ng-container>
 
       <ng-container matColumnDef="dueDay">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Ngày<br />đến hạn</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.day'|translate}}<br />{{'Transactions.RollTernSchedule.OnRollTermCardTab.dueDay'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
           <mat-form-field>
             <input matInput type="text" [(ngModel)]="card.dueDay" mask="00" />
@@ -108,7 +108,7 @@
       </ng-container>
 
       <ng-container matColumnDef="expiredDate">
-        <th mat-header-cell *matHeaderCellDef>Ngày<br />hết hạn</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.day'|translate}}<br />{{'Transactions.RollTernSchedule.OnRollTermCardTab.expiredDate'|translate}}</th>
         <td mat-cell *matCellDef="let card">
           <mat-form-field>
             <input type="text" matInput [(ngModel)]="card.expiredDateString" mask="00/00" />
@@ -117,14 +117,14 @@
       </ng-container>
 
       <ng-container matColumnDef="isHold">
-        <th mat-header-cell *matHeaderCellDef>Giử thẻ</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.isHold'|translate}}</th>
         <td mat-cell *matCellDef="let card">
           <input matCheckbox type="checkbox" [(ngModel)]="card.isHold" [checked]="card.isHold == 1" />
         </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Trạng thái</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.status'|translate}}</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
           <mat-form-field appearance="outline">
             <select disabled matSelect [(ngModel)]="card.trackingState" matNativeControl>
@@ -136,7 +136,7 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="note">
-        <th mat-header-cell *matHeaderCellDef>Ghi chú</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.note'|translate}}</th>
         <td mat-cell *matCellDef="let card">
           <mat-form-field>
             <textarea matInput [(ngModel)]="card.note"></textarea>
@@ -144,14 +144,14 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Hành động</th>
+        <th mat-header-cell *matHeaderCellDef>{{'Transactions.RollTernSchedule.OnRollTermCardTab.actions'|translate}}</th>
         <td mat-cell *matCellDef="let card; let i = dataIndex" style="width: 10%; text-align: center">
           <mat-icon style="color: red" title="Lên lịch Advance" (click)="showCreateRollTermScheduleDialog(card)"
-            >format_list_numbered_rtl</mat-icon
+            >{{'Transactions.RollTernSchedule.OnRollTermCardTab.format_list_numbered_rtl'|translate}}</mat-icon
           >
           <mat-icon style="color: green" title="Cập nhật" (click)="updateCardTrackingState(i)">save</mat-icon>
           <mat-icon style="color: blue" title="Nhận phí" (click)="advanceCash(card.refId, card.clientId)"
-            >attach_money</mat-icon
+            >{{'Transactions.RollTernSchedule.OnRollTermCardTab.attach_money'|translate}}</mat-icon
           >
         </td>
       </ng-container>
@@ -160,20 +160,20 @@
           <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
             <div class="example-element-description" fxLayout="column">
               <div>
-                <span style="font-weight: bold"> Tên khách hàng : </span>
+                <span style="font-weight: bold"> {{'Transactions.RollTernSchedule.OnRollTermCardTab.clientName'|translate}}</span>
                 <a href="/#/clients/{{ element.clientId }}/general?typeViewClient=view">
-                  <mat-icon style="color: black" title="Chi tiết">person</mat-icon>
+                  <mat-icon style="color: black" title="Chi tiết">{{'Transactions.RollTernSchedule.OnRollTermCardTab.person2'|translate}}</mat-icon>
                   {{ element.clientName }}<br />
                 </a>
                 <mat-label style="font-size: small" title="Số dư tài khoản">
-                  <mat-icon style="color: green">monetization_on</mat-icon>
+                  <mat-icon style="color: green">{{'Transactions.RollTernSchedule.OnRollTermCardTab.monetization_on2'|translate}}</mat-icon>
 
                   {{ element.accountBalanceDerived | money }}
                 </mat-label>
                 <br />
                 <mat-label style="font-size: small" *ngIf="element.groupName">
                   <a href="#/groups/{{ element.groupId }}/general">
-                    <mat-icon style="color: black" title="Thuộc đại lý">groups</mat-icon>
+                    <mat-icon style="color: black" title="Thuộc đại lý">{{'Transactions.RollTernSchedule.OnRollTermCardTab.groups2'|translate}}</mat-icon>
                     {{ element.groupName }}
                   </a>
                   <br />
@@ -182,15 +182,15 @@
                   (click)="showHistoryTransaction(element.clientId)"
                   title="Xem lịch sử giao dịch 90 ngày gần nhất"
                 >
-                  <mat-icon style="color: black">fact_check</mat-icon>
-                  <a style="color: black" href="javascript:void(0)"> Lịch sử giao dịch </a>
+                  <mat-icon style="color: black">{{'Transactions.RollTernSchedule.OnRollTermCardTab.fact_check'|translate}}</mat-icon>
+                  <a style="color: black" href="javascript:void(0)"> {{'Transactions.RollTernSchedule.OnRollTermCardTab.showHistoryTransaction2'|translate}} </a>
                 </mat-label>
               </div>
               <div>
-                <span style="font-weight: bold"> Số điện thoại :</span>
+                <span style="font-weight: bold"> {{'Transactions.RollTernSchedule.OnRollTermCardTab.clientPhone'|translate}}</span>
                 &nbsp; &nbsp;{{ element.clientPhone }}
               </div>
-              <div><span style="font-weight: bold"> Số thẻ:</span>&nbsp; &nbsp;{{ element.identifierId }}</div>
+              <div><span style="font-weight: bold"> {{'Transactions.RollTernSchedule.OnRollTermCardTab.identifierId'|translate}}</span>&nbsp; &nbsp;{{ element.identifierId }}</div>
             </div>
           </div>
         </td>
